src/css/_theme_style_overrides.css
.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

[data-theme='dark'] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

ul.table-of-contents li a code,
ul.table-of-contents li code {
  background-color: transparent;
}

.table-of-contents__link:hover,
.table-of-contents__link:hover code,
.table-of-contents__link--active,
.table-of-contents__link--active code {
  color: var(--color-yellow);
  text-decoration: none;
  font-weight: 700 !important;
}

.table-of-contents li {
  margin: 0.75rem 1.5rem;
}

.table-of-contents__link {
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.375rem;
}

.table-of-contents__left-border {
  border-left: 2px solid var(--ifm-toc-border-color) !important;
}

.pagination-nav__sublabel {
  display: none;
}
.pagination-nav__link {
  border: none;
}
.pagination-nav__label {
  font-weight: 500;
  font-size: 1em;
}

.pagination-nav__item:first-child .pagination-nav__label::before {
  content: url('/img/blue-arrow-left.svg');
  padding-right: 1em;
}
.pagination-nav__item--next .pagination-nav__label::after {
  content: url('/img/blue-arrow-right.svg');
  padding-left: 1em;
}
.tocCollapsibleButton_node_modules-\@docusaurus-theme-classic-lib-next-theme-TOCCollapsible-styles-module {
  padding-left: 0 !important;
}

article.margin-bottom--xl {
  background-image: url('/img/divider-dotted-dark.svg');
  background-repeat: repeat-x;
  background-position: bottom;
  margin-bottom: 4.5rem !important;
  padding-bottom: 5rem;
}

article p img {
  border: 2px solid var(--color-blue);
}
@media (max-width: 1024px) {
  article.margin-bottom--xl {
    padding-bottom: 3.5rem !important;
    margin-bottom: 3.125rem !important;
  }
}

article header h2 {
  font-size: var(--typography-h2-d-medium-font-size) !important;
  line-height: var(--typography-h2-d-medium-line-height) !important;
  font-weight: var(--typography-h2-d-medium-font-weight) !important;
}

article header .avatar__intro:only-child span::before {
  content: 'Posted by ';
}
article header .margin-top--md.margin-bottom--sm.row {
  margin-bottom: 16px !important;
}

article header .avatar__intro:only-child .avatar__name span,
article header div time {
  font-weight: var(--typography-body-2-d-font-weight);
  font-size: var(--typography-body-2-d-font-size);
  line-height: var(--typography-body-2-d-line-height);
}
article header .avatar__intro:only-child {
  margin-top: -0.9375rem;
  margin-bottom: 7px;
}

article .markdown p {
  font-weight: var(--typography-body-1-d-font-weight);
  font-size: var(--typography-body-1-d-font-size);
  line-height: var(--typography-body-1-d-line-height);
}

article footer .col {
  display: flex;
  flex-direction: column;
}
article footer .col b {
  font-weight: var(--typography-h4-d-font-weight);
  font-size: var(--typography-h4-d-font-size);
  line-height: var(--typography-h4-d-line-height);
  margin-bottom: 0.625rem;
}
@media (max-width: 768px) {
  article footer .col b {
    margin-bottom: 0.325rem;
    font-weight: var(--typography-h4-m-font-weight);
    font-size: var(--typography-h4-m-font-size);
    line-height: var(--typography-h4-m-line-height);
  }
  article .markdown p {
    font-weight: var(--typography-body-1-m-font-weight);
    font-size: var(--typography-body-1-m-font-size);
    line-height: var(--typography-body-1-m-line-height);
  }
  article header h2 {
    font-size: var(--typography-h2-m-medium-font-size) !important;
    line-height: var(--typography-h2-m-medium-line-height) !important;
    font-weight: var(--typography-h2-m-medium-font-weight) !important;
  }
  article footer .col.text--right.col--3 b {
    font-weight: var(--typography-links-m-underline-font-weight);
    font-size: var(--typography-links-m-underline-font-size);
    line-height: var(--typography-links-m-underline-line-height);
    color: var(--color-blue);
    text-decoration-line: var(--typography-links-m-underline-text-decoration);
    text-underline-offset: 3px;
  }
  article header .avatar__intro:only-child .avatar__name span,
  article header div time {
    font-weight: var(--typography-body-2-m-font-weight);
    font-size: var(--typography-body-2-m-font-size);
    line-height: var(--typography-body-2-m-line-height);
  }
}
article footer {
  flex-direction: column-reverse !important;
}

article footer .col.text--right.col--3 {
  text-align: left !important;
  margin-bottom: 2.25rem;
}
article footer .col.text--right.col--3 b {
  font-weight: var(--typography-links-d-underline-font-weight);
  font-size: var(--typography-links-d-underline-font-size);
  line-height: var(--typography-links-d-underline-line-height);
  color: var(--color-blue);
  text-decoration-line: var(--typography-links-d-underline-text-decoration);
  text-underline-offset: 3px;
}

article footer .col.text--right.col--3 b::after {
  content: url('/img/arrow-blue.svg');
  padding-left: 0.4375rem;
}

.docusaurus-mt-lg {
  margin-top: 1.5rem !important;
}
article footer .col ul li {
  margin-right: 1rem !important;
  margin-bottom: 0rem !important;
}
article footer .col ul li a {
  border: 2px solid var(--color-blue) !important;
  padding: 0.5rem !important;
  padding-left: 0.625rem !important;
  border-radius: 0 !important;
  font-weight: var(--typography-tags-d-font-weight);
  font-size: var(--typography-tags-d-font-size);
  line-height: var(--typography-tags-d-line-height);
  color: var(--color-blue);
  border-right: none !important;
}

article footer .col ul li a::after {
  content: url('/img/dot-icon.svg');
  position: relative;
  margin-left: 0.625rem;
  top: -1px;
}
article footer .col ul li::after {
  content: url('/img/tag-front.svg');
  min-height: 2rem;
  position: relative;
  top: 0.7188rem;
}
article footer .col ul {
  margin-left: 0 !important;
}

/** Blog Detail**/
article {
  background-image: url('/img/divider-dotted-dark.svg');
  background-repeat: repeat-x;
  background-position: bottom;
  margin-bottom: 3rem !important;
  padding-bottom: 6.5rem;
}

article h1 {
  font-weight: var(--typography-h1-d-font-weight);
  font-size: var(--typography-h1-d-font-size);
  line-height: var(--typography-h1-d-line-height);
}

@media (min-width: 768px and max-width:1024px) {
  article h1 {
    font-weight: var(--typography-h1-t-font-weight);
    font-size: var(--typography-h1-t-font-size);
    line-height: var(--typography-h1-t-line-height);
  }
}

@media (max-width: 767px) {
  article h1 {
    font-weight: var(--typography-h1-m-font-weight);
    font-size: var(--typography-h1-m-font-size);
    line-height: var(--typography-h1-m-line-height);
  }

  nav .pagination-nav__link .pagination-nav__label {
    text-decoration-line: var(--typography-links-m-underline-text-decoration);
    font-weight: var(--typography-links-m-underline-font-weight);
    font-size: var(--typography-links-m-underline-font-size);
    line-height: var(--typography-links-m-underline-line-height);
  }
}

article header h1 + .margin-vert--md {
  margin-top: 1.5rem !important;
}

article footer .theme-edit-this-page {
  margin-bottom: 1.5rem;
}

nav .pagination-nav__link .pagination-nav__label {
  color: var(--color-blue);
  text-decoration-line: var(--typography-links-d-underline-text-decoration);
  text-underline-offset: 3px;
  font-weight: var(--typography-links-d-underline-font-weight);
  font-size: var(--typography-links-d-underline-font-size);
  line-height: var(--typography-links-d-underline-line-height);
}

nav .pagination-nav__link {
  padding: 0rem;
}

.pagination-nav__item:first-child .pagination-nav__label::before {
  padding-right: 0.5rem !important;
}

.pagination-nav__item--next .pagination-nav__label::after {
  padding-left: 0.5rem !important;
}

